# FinanceHub

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: pyproject.toml
backend/financehub_market_api/: __init__.py  cache.py  env.py  fundamental_analysis.py  main.py  market_news.py  models.py  recommendation_assembler.py  recommendation_catalog.py  recommendation_flow.py  recommendation_products.py  recommendation_profiles.py  recommendation_rules.py  recommendation_types.py  recommendations.py  service.py  watchlist.py
backend/scripts/: capture_anthropic_agent_responses.py  capture_openai_agent_responses.py  rebuild_chat_recall_index.py  refresh_recommendation_candidate_pool.crontab.example  refresh_recommendation_candidate_pool.py  run_recommendation_candidate_refresh.sh  seed_chat_messages_collection.py  seed_compliance_knowledge_collection.py  seed_product_knowledge_collection.py
backend/tests/: conftest.py  integration_support.py  test_anthropic_live_e2e.py  test_anthropic_live_smoke.py  test_anthropic_response_fixtures.py  test_anthropic_runtime_migration.py  test_anthropic_sample_capture.py  test_api.py  test_auth.py  test_cache.py  test_candidate_pool_cache.py  test_candidate_pool_refresh.py  test_chat.py  test_chat_recall.py  test_compliance_knowledge_qdrant_store.py  test_compliance_knowledge_service.py  test_compliance_rag_live_e2e.py  test_compliance_rag_live_smoke.py  test_compliance_rag_smoke.py  test_dolthub_client.py  test_e2e.py  test_e2e_offline.py  test_env.py  test_evidence_projection.py  test_fundamental_analysis.py  (+39 more)
(+182 files in other folders)
