[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "financehub-market-api"
version = "0.1.0"
description = "Lightweight API for FinanceHub China market pages"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.17,<2.0",
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<0.29",
  "langgraph>=0.2,<0.4",
  "openai>=1.82,<2.0",
  "pydantic>=2.11,<3.0",
  "qdrant-client>=1.12,<2.0",
  "redis>=5.2,<6.0",
  "uvicorn>=0.35,<0.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
financehub-refresh-candidate-pool = "scripts.refresh_recommendation_candidate_pool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["financehub_market_api*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
